--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -18,6 +18,20 @@
   padding: 0 1rem;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+  height: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #f2f2f2;
+}
+::-webkit-scrollbar-thumb {
+  background: #555;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #666;
+}
+
 img {
   width: full;
 }
