--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .btn-primary {
-    @apply bg-orange-500 text-white px-4 py-1 rounded-[2px] font-medium hover:bg-orange-600 transition-colors duration-200;
+    @apply bg-orange-500 text-sm text-white px-4 py-1 rounded-[2px] font-medium hover:bg-orange-600 transition-colors duration-200;
   }
 }
 
